--- a/bank-accounts-infrastructure/src/main/resources/application.yml
+++ b/bank-accounts-infrastructure/src/main/resources/application.yml
@@ -14,8 +14,8 @@ cloud:
       static: ${AWS_DEFAULT_REGION}
     dynamodb:
       tables:
-        bank-accounts:
-          table-name: ${AWS_DYNAMODB_BANK_ACCOUNTS_TABLE_NAME}
+        banking-entities:
+          table-name: ${AWS_DYNAMODB_BANKING_ENTITIES_TABLE_NAME}
 
 api:
   v1:
