--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 		<commons-validator.version>1.7</commons-validator.version>
 		<commons-lang3.version>3.14.0</commons-lang3.version>
 
+		<springdoc-openapi-starter-webmvc-ui.version>2.8.5</springdoc-openapi-starter-webmvc-ui.version>
 		<maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
 		<maven-failsafe-plugin.version>3.5.2</maven-failsafe-plugin.version>
 		<maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
@@ -113,6 +114,12 @@
 				<groupId>org.mapstruct</groupId>
 				<artifactId>mapstruct</artifactId>
 				<version>${mapstruct.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springdoc</groupId>
+				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+				<version>${springdoc-openapi-starter-webmvc-ui.version}</version>
 			</dependency>
 
 			<dependency>
