--- a/bank-accounts-infrastructure/src/main/resources/application-local.yml
+++ b/bank-accounts-infrastructure/src/main/resources/application-local.yml
@@ -9,6 +9,8 @@ app:
         topic-name: ${KAFKA_BANK_ACCOUNT_OPENED_TOPIC_NAME:bank-account-opened}
       bank-account-activated:
         topic-name: ${KAFKA_BANK_ACCOUNT_ACTIVATED_TOPIC_NAME:bank-account-activated}
+      bank-account-blocked:
+        topic-name: ${KAFKA_BANK_ACCOUNT_BLOCKED_TOPIC_NAME:bank-account-blocked}
       joint-account-holder-added:
         topic-name: ${KAFKA_JOINT_ACCOUNT_HOLDER_ADDED_TOPIC_NAME:joint-account-holder-added}
 
