--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 		<commons-validator.version>1.7</commons-validator.version>
 		<commons-lang3.version>3.14.0</commons-lang3.version>
 		<testcontainers.version>1.21.4</testcontainers.version>
+		<instancio-junit.version>5.5.1</instancio-junit.version>
 
 		<springdoc-openapi-starter-webmvc-ui.version>2.8.5</springdoc-openapi-starter-webmvc-ui.version>
 		<maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
@@ -153,6 +154,13 @@
 				<groupId>org.testcontainers</groupId>
 				<artifactId>kafka</artifactId>
 				<version>${testcontainers.version}</version>
+				<scope>test</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>org.instancio</groupId>
+				<artifactId>instancio-junit</artifactId>
+				<version>${instancio-junit.version}</version>
 				<scope>test</scope>
 			</dependency>
 		</dependencies>
