--- a/bank-accounts-infrastructure/src/main/resources/application-prod.yml
+++ b/bank-accounts-infrastructure/src/main/resources/application-prod.yml
@@ -13,15 +13,30 @@ spring:
         username='${KAFKA_API_KEY}'
         password='${KAFKA_API_SECRET}';
 
+app:
+  kafka:
+    topics:
+      bank-account-opened:
+        topic-name: ${KAFKA_BANK_ACCOUNT_OPENED_TOPIC_NAME:bank-account-opened}
+      bank-account-activated:
+        topic-name: ${KAFKA_BANK_ACCOUNT_ACTIVATED_TOPIC_NAME:bank-account-activated}
+      bank-account-blocked:
+        topic-name: ${KAFKA_BANK_ACCOUNT_BLOCKED_TOPIC_NAME:bank-account-blocked}
+      bank-account-unblocked:
+        topic-name: ${KAFKA_BANK_ACCOUNT_UNBLOCKED_TOPIC_NAME:bank-account-unblocked}
+      bank-account-closed:
+        topic-name: ${KAFKA_BANK_ACCOUNT_CLOSED_TOPIC_NAME:bank-account-closed}
+      joint-account-holder-added:
+        topic-name: ${KAFKA_JOINT_ACCOUNT_HOLDER_ADDED_TOPIC_NAME:joint-account-holder-added}
+
 cloud:
   aws:
     region:
       static: ${AWS_DEFAULT_REGION}
     credentials:
-      access-key-id: ${AWS_ACCESS_KEY_ID:test}
-      secret-key: ${AWS_SECRET_ACCESS_KEY:test}
+      access-key-id: ${AWS_ACCESS_KEY_ID}
+      secret-key: ${AWS_SECRET_ACCESS_KEY}
     dynamodb:
-      endpoint: ${AWS_DYNAMODB_ENDPOINT}
       tables:
         banking-entities:
           table-name: ${AWS_DYNAMODB_BANKING_ENTITIES_TABLE_NAME}
