add: implement account holders endpoint and update URI properties

--- a/bank-accounts-infrastructure/src/main/resources/application.yml
+++ b/bank-accounts-infrastructure/src/main/resources/application.yml
@@ -45,6 +45,7 @@ api:
     bank-accounts:
       root-path: '/api/v1/bank-accounts'
       bank-account-id-path: '/api/v1/bank-accounts/{bank-account-id}'
+      account-holders-path: '/api/v1/bank-accounts/{bank-account-id}/account-holders'
 
 management:
   endpoints:
