Add integration tests and update domain exception handling
Introduced integration tests for account state transitions: activate, block, unblock, and close operations. Improved `BankAccountsURIProperties` with dedicated URI methods for these transitions. Updated exception hierarchy by extending `DomainRuleValidationException` for specific domain rules.

--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,8 @@
 		</sonar.coverage.jacoco.xmlReportPaths>
 		<sonar.coverage.exclusions>
 			**/*Application.java,
-			**/config/**
+			**/config/**,
+			**/*MapperImpl.java
 		</sonar.coverage.exclusions>
 	</properties>
 
