Update CI pipeline to fix docker compose file name
Renamed the docker compose file from `docker-compose.ci.yml` to `docker-compose-ci.yml` in the GitHub Actions workflow. This ensures the correct file is used for starting and shutting down the infrastructure during the pipeline.

--- a/.github/workflows/on-push-pipeline.yml
+++ b/.github/workflows/on-push-pipeline.yml
@@ -23,7 +23,7 @@ jobs:
           cache: maven
 
       - name: Start infrastructure
-        run: docker compose -f .github/docker-compose.ci.yml up -d
+        run: docker compose -f .github/docker-compose-ci.yml up -d
 
       - name: Wait for LocalStack
         run: |
@@ -51,4 +51,4 @@ jobs:
 
       - name: Shutdown
         if: always()
-        run: docker compose -f .github/docker-compose.ci.yml down
+        run: docker compose -f .github/docker-compose-ci.yml down
